Update PropertyUtil and LanguageUtil